Fixed horizontal scroll-bar bug

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header {
     height: 5em;
     top: 0;
     left: 0;
-    min-width: 100vw;
+    width: 100%;
     z-index: 1;
     border-bottom: 1px solid grey;
 }
@@ -336,7 +336,7 @@ footer ul {
 
     #articles {
         grid-template: auto repeat(9, 1fr) / 1fr;
-        min-width: 98vw;
+        width: 100%;
     }
 
     #articles>h2 {
@@ -364,6 +364,25 @@ footer ul {
 
     #contact>div {
         grid-template: auto 1fr / 1fr;
+        justify-items: left;
+    }
+
+    #contact form input[type=text], #contact form textarea, #contact form input[type=submit]  {
+        width: 95vw;
+    }
+
+    #contact {
+        padding: 0;
+        margin: 0 auto;
+    }
+
+    #contact-info {
+        margin-bottom: 2em;
+    }
+
+    #contact form {
+        border-top: 2px solid black;
+        padding-top: 2em;
     }
 
     nav>ul>li {
@@ -378,7 +397,6 @@ footer ul {
     footer {
         background-color: #401921;
         color: white;
-        min-width: 100vw;
         display: flex;
         flex-direction: column;
         height: auto;
@@ -399,27 +417,6 @@ footer ul {
         margin: 0;
         top: 0;
         left: 0;
-    }
-
-    #contact>div {
-        justify-items: left;
-    }
-
-    #contact form input[type=text], #contact form textarea, #contact form input[type=submit]  {
-        width: 95vw;
-    }
-
-    #contact {
-        padding: 0;
-        margin: 0 auto;
-    }
-
-    #contact-info {
-        margin-bottom: 2em;
-    }
-
-    #contact form {
-        border-top: 2px solid black;
-        padding-top: 2em;
+        border-radius: 0 0 0.5em 0.5em;
     }
 }
